--- a/4.html
+++ b/4.html
@@ -56,6 +56,7 @@
         }
         p {
             font-size: 1rem;
+            margin : 10px;
         }
     }
 </style>
@@ -74,3 +75,4 @@
 
 </body>
 </html>
+
