--- a/3.html
+++ b/3.html
@@ -59,6 +59,7 @@
         }
         p {
             font-size: 1rem;
+            margin : 10px;
         }
     }
 </style>
@@ -78,3 +79,4 @@
 
 </body>
 </html>
+
