--- a/1.html
+++ b/1.html
@@ -80,6 +80,7 @@
         }
         p {
             font-size: 1rem;
+             margin : 10px;
         }
     }
 </style>
@@ -116,3 +117,4 @@
 
 </body>
 </html>
+
