--- a/6.html
+++ b/6.html
@@ -17,16 +17,18 @@
         min-height: 100vh;
         position: relative;
     }
-    .hearts {
-        position: fixed;
-        top: 0; left: 0;
-        width: 100%; height: 100%;
-        pointer-events: none;
-        z-index: 0;
-        background-image: url('https://i.imgur.com/w1XvR2E.png');
-        animation: floatHearts 20s linear infinite;
-        opacity: 0.3;
-    }
+  .hearts {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    pointer-events: none;
+    z-index: 0;
+    background-image: url('https://png.pngtree.com/png-clipart/20230927/original/pngtree-falling-pink-hearts-png-image_13324593.png');
+    background-size: contain;
+    animation: floatHearts 20s linear infinite;
+    opacity: 0.3;
+}
+
     @keyframes floatHearts {
         from { background-position: 0 0; }
         to { background-position: 0 -1000px; }
@@ -97,3 +99,4 @@
 
 </body>
 </html>
+
