--- a/6.html
+++ b/6.html
@@ -17,18 +17,16 @@
         min-height: 100vh;
         position: relative;
     }
-  .hearts {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    pointer-events: none;
-    z-index: 0;
-    background-image: url('https://png.pngtree.com/png-clipart/20230927/original/pngtree-falling-pink-hearts-png-image_13324593.png');
-    background-size: contain;
-    animation: floatHearts 20s linear infinite;
-    opacity: 0.3;
-}
-
+    .hearts {
+        position: fixed;
+        top: 0; left: 0;
+        width: 100%; height: 100%;
+        pointer-events: none;
+        z-index: 0;
+        background-image: url('https://i.imgur.com/w1XvR2E.png');
+        animation: floatHearts 20s linear infinite;
+        opacity: 0.3;
+    }
     @keyframes floatHearts {
         from { background-position: 0 0; }
         to { background-position: 0 -1000px; }
@@ -85,18 +83,17 @@
     <p class="dua">🌸 "اللهم بارك لها في عمرها، واغفر ذنبها، واجعل الجنة مثواها" 🌸  
     O Allah, bless her life, forgive her sins, and make Jannah her final home.</p>
 
-    <p>Wifey, har saans ke saath tum meri duaon ka hissa ho.  
-    Tum meri muskaan ho, meri dua ka sukoon ho, aur meri zindagi ka sabse haseen tohfa ho.  
+    <p>Wifey, har saans ke saath Ap meri duaon ka hissa ho.  
+    Ap meri muskaan ho, meri dua ka sukoon ho, aur meri zindagi ka sabse haseen tohfa ho.  
     Har ghadi Allah se dua karta hoon ke tumhe kabhi gham na aaye,  
     tumhara har din muskaanon, mohabbat aur rehmat se bhara ho.</p>
 
     <p>💌 "The best among you are those who are best to their wives." – Prophet Muhammad ﷺ</p>
 
-    <p>Mere liye tum sirf ek biwi nahi… tum meri duniya, meri dua, meri ibadat ka hissa ho.  
+    <p>Mere liye Ap sirf ek biwi nahi… Ap meri duniya, meri dua, meri ibadat ka hissa ho.  
     I love you beyond words, and I can’t wait to celebrate your day in the most special way.  
     💕</p>
 </div>
 
 </body>
 </html>
-
