--- a/finally.html
+++ b/finally.html
@@ -12,15 +12,23 @@
     box-sizing: border-box;
   }
   body {
-    margin: 0; padding: 0;
-    background: linear-gradient(135deg, #0a0a0a, #1a1a1a);
-    font-family: 'Poppins', sans-serif;
-    color: #f5deb3;
-    overflow-x: hidden;
-  }
+  margin: 0; padding: 0;
+  background:
+    linear-gradient(135deg, rgba(20, 15, 0, 0.7), rgba(30, 25, 5, 0.85)),
+    url('https://images.unsplash.com/photo-1578985545062-69928b1d9587?auto=format&fit=crop&w=1920&q=80') no-repeat center center fixed;
+  background-size: cover;
+  filter: brightness(0.9) contrast(1.1);
+  font-family: 'Poppins', sans-serif;
+  color: #f5deb3;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
   .banner {
-    max-width: 1200px;
-    margin: 40px auto;
+    width: 700px;
+    max-width: 95%;
     background: linear-gradient(145deg, #292929, #121212);
     border-radius: 28px;
     box-shadow: 0 0 40px 10px rgba(255, 215, 0, 0.7);
@@ -28,6 +36,16 @@
     position: relative;
     overflow: hidden;
     text-align: center;
+    transition: transform 1s;
+    cursor: pointer;
+    perspective: 1000px;
+    color: #f5deb3;
+  }
+  .banner.flipped {
+    transform: rotateY(180deg);
+    background: linear-gradient(145deg, #111111, #222222);
+    box-shadow: 0 0 50px 20px gold;
+    color: #fff8dc;
   }
   .banner::before {
     content: "";
@@ -47,6 +65,11 @@
     opacity: 0.4;
     pointer-events: none;
     z-index: 0;
+    border-radius: 28px;
+  }
+  .banner.flipped::before {
+    opacity: 0.6;
+    animation-duration: 15s;
   }
   @keyframes sparkle {
     0% { background-position: 0 0; }
@@ -54,7 +77,7 @@
   }
   h1 {
     font-family: 'Great Vibes', cursive;
-    font-size: 5rem;
+    font-size: 3.5rem;
     color: #ffd700;
     text-shadow:
       0 0 12px #ffd700,
@@ -62,28 +85,45 @@
       0 0 30px #ffdf00;
     margin: 0 0 20px 0;
     letter-spacing: 3px;
+    transition: color 1s;
+  }
+  .banner.flipped h1 {
+    color: #fff8dc;
+    text-shadow:
+      0 0 12px #fff8dc,
+      0 0 20px #fffacd,
+      0 0 30px #fffacd;
   }
   h2 {
     font-weight: 600;
-    font-size: 2.2rem;
+    font-size: 1.6rem;
     color: #fff8dc;
     margin-bottom: 36px;
     letter-spacing: 2px;
     text-transform: uppercase;
+    transition: color 1s;
+  }
+  .banner.flipped h2 {
+    color: #ffeb99;
   }
   p {
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     line-height: 1.8;
     max-width: 850px;
     margin: 0 auto 24px auto;
     font-weight: 500;
     color: #ffeb99;
     text-shadow: 0 0 6px #f0d56e88;
+    transition: color 1s, text-shadow 1s;
+  }
+  .banner.flipped p {
+    color: #fff8dc;
+    text-shadow: 0 0 10px #f7e99dcc;
   }
   .dua {
     margin-top: 30px;
     font-style: italic;
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: #fff3a8;
     border-left: 5px solid #ffd700;
     padding-left: 20px;
@@ -91,6 +131,11 @@
     margin-left: auto;
     margin-right: auto;
     font-weight: 600;
+    transition: color 1s, border-color 1s;
+  }
+  .banner.flipped .dua {
+    color: #fff8dc;
+    border-color: #fff8dc;
   }
   .dua span {
     display: block;
@@ -98,36 +143,19 @@
   }
   .from-text {
     margin-top: 50px;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
     color: #ffcc33;
     letter-spacing: 2px;
     font-style: italic;
+    transition: color 1s;
+  }
+  .banner.flipped .from-text {
+    color: #fffacd;
   }
   @media (max-width: 1024px) {
     .banner {
-      padding: 50px 40px;
-    }
-    h1 {
-      font-size: 4rem;
-    }
-    h2 {
-      font-size: 1.8rem;
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 100%;
-    }
-    .dua {
-      font-size: 1.1rem;
-      padding-left: 15px;
-      max-width: 100%;
-    }
-  }
-  @media (max-width: 600px) {
-    .banner {
-      padding: 40px 20px;
-      border-radius: 20px;
+      padding: 40px 30px;
     }
     h1 {
       font-size: 3rem;
@@ -137,27 +165,53 @@
     }
     p {
       font-size: 1rem;
-      padding: 0 10px;
     }
     .dua {
-      font-size: 1rem;
-      padding-left: 12px;
+      font-size: 0.9rem;
+      padding-left: 15px;
+      max-width: 100%;
+    }
+    .from-text {
+      font-size: 0.9rem;
+    }
+  }
+  @media (max-width: 600px) {
+    .banner {
+      padding: 30px 15px;
+      border-radius: 20px;
+    }
+    h1 {
+      font-size: 2.5rem;
+    }
+        h2 {
+      font-size: 1.2rem;
+    }
+    p {
+      font-size: 0.9rem;
+      padding: 0 8px;
+    }
+    .dua {
+      font-size: 0.85rem;
+      padding-left: 10px;
+    }
+    .from-text {
+      font-size: 0.85rem;
     }
   }
 </style>
 </head>
 <body>
 
-<div class="banner" role="banner" aria-label="VIP birthday banner for أوربا فاطمة from Mouaviz">
+<div class="banner" role="banner" aria-label="VIP birthday banner for أوربا فاطمة from Mouaviz" tabindex="0">
   <h1>Happy Birthday, أوربا فاطمة!</h1>
   <h2>With All My Love & Duas — From Mouaviz</h2>
 
   <p>  
     Meri pyari <strong>حبيبة القلب</strong>, <strong>نور عيني</strong>, aur <strong>روح روحي</strong>,  
     Ap meri zindagi ki sabse khoobsurat rehmat ho.  
-    Aaj ke is khaas din par, meri har dua sirf apkei  liye hai—  
+    Aaj ke is khaas din par, meri har dua sirf apkei liye hai—  
     Khuda apki zindagi ko khushiyon, barkat, aur mohabbat se roshan kare.  
-    ap meri har saans ka sahara ho, meri har dua ka asar, aur mera sabse bada naseeb.  
+    Ap meri har saans ka sahara ho, meri har dua ka asar, aur mera sabse bada naseeb.  
   </p>
 
   <div class="dua" aria-label="Duas for birthday">
@@ -169,6 +223,13 @@
 
   <div class="from-text">— Your's Mouaviz</div>
 </div>
+
+<script>
+  const banner = document.querySelector('.banner');
+  banner.addEventListener('click', () => {
+    banner.classList.toggle('flipped');
+  });
+</script>
 
 </body>
 </html>
